--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,10 +2,10 @@
 <html>
     <head>
         <title>Digit Predictor</title>
-        <link rel="stylesheet" type="text/css" href="css/style.css"/>
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}" />
     </head>
     <body>
-        <script type="text/javascript" src="js/predict.js"></script>
+        <script type="text/javascript" src="{{ url_for('static', filename='js/predict.js') }}"></script>
         <h1>Handwritten Canvas Input to MNIST Input Converter</h1>
         <p>Convert any size canvas based input into 20x20 pixel bounding box<br>centered on 28x28 canvas as per MNIST specification.</p>
         <div class="items">
@@ -34,6 +34,6 @@
             -->
         </div>
         <!-- canvas sketchpad code -->
-        <script type="text/javascript" src="js/mnist-canvas.js"></script>
+        <script type="text/javascript" src="{{ url_for('static', filename='js/mnist-canvas.js') }}"></script>
     </body>
 </html>
