--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -35,5 +35,7 @@
         </div>
         <!-- canvas sketchpad code -->
         <script type="text/javascript" src="{{ url_for('static', filename='js/mnist-canvas.js') }}"></script>
+        <!-- clear canvas button -->
+        <button type="button" onclick="sketcher.clear()">Clear</button>
     </body>
 </html>
