--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -64,7 +64,52 @@ button {
   background: #fff;
   color: #000;
 }
+button:focus {
+  outline:0;
+}
+button:active {
+  color: #7d7d7d;
+  border: 2px solid #7d7d7d;
+  box-shadow: 5px 10px #a9a9a9:
+}
 
-button:hover {
-  background: #111;
+#clearButton {
+  margin-left: -400px;
+}
+
+/* the following button style was lifted from:
+    https://codepen.io/LeoPragi/pen/gzrGoG
+*/
+
+.wrap {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.button {
+  width: 140px;
+  height: 45px;
+  font-family: 'Roboto', sans-serif;
+  font-size: 11px;
+  text-transform: uppercase;
+  letter-spacing: 2.5px;
+  font-weight: 500;
+  color: #000;
+  background-color: #fff;
+  border: none;
+  border-radius: 45px;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease 0s;
+  cursor: pointer;
+  outline: none;
+  margin-bottom: -10px;
+}
+.button:hover {
+  /*background-color: #2EE59D;*/
+  /*box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);*/
+  background-color: #0e4d92;
+  box-shadow: 0px 15px 20px rgba(14, 77, 146, 0.4);
+  color: #fff;
+  transform: translateY(-7px);
 }
