Return results from 3 saved models

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -59,7 +59,13 @@ p {
   text-align: center;
 }
 
-canvas {
+.result {
+  min-width: 85px;
+  min-height: 85px;
+  padding: 15px;
+}
+
+canvas, .result {
   border: 1px solid black;
   background: #fff;
 }
